apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'appengine'

def appId = "socialfridge"
def appVersion = 3

def appengineVersion = "1.9.6"

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "com.google.appengine:gradle-appengine-plugin:1.9.5"
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

sourceCompatibility = 1.7
targetCompatibility = 1.7

dependencies {
    appengineSdk "com.google.appengine:appengine-java-sdk:${appengineVersion}"

    compile fileTree(dir: 'libs', include: ['*.jar'])
    compile project(":shared")

    compile "com.google.guava:guava:17.+"

    // App Engine
    compile "javax.servlet:servlet-api:2.5"
    compile "javax.servlet:jstl:1.2"
    compile "com.ganyo:gcm-server:1.0.2"

    compile "com.google.appengine:appengine-endpoints:${appengineVersion}"
    compile "com.google.appengine:appengine-endpoints-deps:${appengineVersion}"

    testCompile "com.google.appengine:appengine-testing:${appengineVersion}"
    testCompile "com.google.appengine:appengine-api-stubs:${appengineVersion}"

    // ORM
    compile "com.googlecode.objectify:objectify:4.+"

    // Facebook
    compile "com.restfb:restfb:1.6.+"
}

appengine {
    httpAddress = "0.0.0.0"
    httpPort = 8080
    jvmFlags = ['-d64', '-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8889', '-Xmx1024m', '-XX:MaxPermSize=512m']
    downloadSdk = true

    appcfg {
        update {
            useJava7 = true
        }

        logs {
            severity = 1
            numDays = 1
            outputFile = file("${appId}.log")
        }

        app {
            // REMINDER: This is for downloading the app from appspot
            // Change the uploaded app version in appengine-web.xml
            id = "${appId}"
            version = appVersion
        }

        endpoints {
            getDiscoveryDocsOnBuild = true
            getClientLibsOnBuild = true
        }
    }
}
